--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,7 +117,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply min-h-screen text-foreground;
   }
 
   .card:before,
@@ -126,7 +126,7 @@
   }
 
   .app {
-    background-image: url('../assets/images/bg.png');
+    background-image: url('../assets/images/asfalt-dark.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
