more works on the dashboard

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -185,3 +185,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.border {
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+}
+
+[data-slot="card"] {
+  border: 1px;
+}
